# quantum-signature

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLibsodium.cmake
src/: aes.c  aes.h  aesconstants.c  aesconstants.h  aessignature.c  aessignature.h  galois256.c  galois256.h  main.c  signature.c  signature.h
